--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="style.css">
     </head>
 <!--test test test test test test test test test test test test test -->
+        <!-- this is the second test in here-->
     <body>
       <script src=""></script>
     <div class="bg_pic">
