Ændret h1 fra rh til vt

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!--selve indholdet-->
         <section class="content">
         <div class ="content_middle">
-            <h1> VELKOMMEN TIL RH 2016</h1>
+            <h1> VELKOMMEN TIL VT 2016</h1>
         </div>
         </section>
     </div> 
